--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "api:build": "aspida",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen:types": "npx microcms-typescript microCMS/schema microCMS/types/response.ts"
   },
   "dependencies": {
+    "@aspida/fetch": "^1.11.0",
+    "aspida": "^1.11.0",
     "microcms-js-sdk": "^2.3.0",
     "next": "^13.0.2",
     "react": "^18.2.0",
@@ -24,6 +28,7 @@
     "eslint-config-next": "13.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "microcms-typescript": "^1.0.13",
     "prettier": "^2.7.1",
     "typescript": "4.8.4"
   }
