--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aspida/fetch": "^1.11.0",
     "aspida": "^1.11.0",
     "microcms-js-sdk": "^2.3.0",
+    "netlify-cli": "^12.1.0",
     "next": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
