--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
 
       - name: npm install and build
         run: |
+          touch .env && echo "${{ secrets.BASE_URL }}" >> .env
           npm install
           npm run build
 
